# GPT_RAG

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  codeql.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppShell.tsx  Card.tsx  JsonView.tsx  StatusPill.tsx
apps/desktop/src/hooks/: useJobEvents.ts
apps/desktop/src/lib/: api.ts  localUiState.ts  session.tsx  tauri.ts
docs/: architecture.md  evaluation.md  gui.md  roadmap.md  schema.md
evals/: golden_queries.json
evals/fixture_corpus/: html_cleaning.md  socket_timeout_guide.md  widget_indexing.md
scripts/: build_desktop_release.py  build_desktop_sidecars.py
scripts/desktop_sidecars/: api_entry.py  worker_entry.py
src/gpt_rag/: __init__.py  __main__.py  answer_generation.py  chunking.py  citations.py  cli.py  config.py  db.py  embeddings.py  evaluation.py  filesystem_ingestion.py  fts_indexing.py  gui_api.py  gui_backend.py  gui_worker.py  hybrid_retrieval.py  lexical_retrieval.py  models.py  parsers.py  reranking.py  semantic_retrieval.py  vector_storage.py
tests/: conftest.py  test_answer_generation.py  test_chunking.py  test_cli.py  test_config.py  test_db.py  test_embeddings.py  test_evaluation.py  test_gui_api.py  test_gui_worker.py  test_hybrid_retrieval.py  test_ingestion.py  test_lexical_retrieval.py  test_parsers.py  test_reranking.py  test_semantic_retrieval.py
tests/fixtures/ingestion/: sample.html  sample.md  sample.txt
(+15 files in other folders)
