[package]
name = "gpt-rag-desktop"
version = "0.1.0"
description = "Local desktop shell for GPT_RAG"
authors = ["Personal project scaffold"]
edition = "2021"

[lib]
name = "gpt_rag_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.2.0"
uuid = { version = "1.12", features = ["v4", "serde"] }
